cmake_minimum_required(VERSION 3.14)
project(Data_Structure_And_OOP_with_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_Structure_And_OOP_with_CPP main.cpp)
add_executable(Data_Structure_And_OOP_with_CPP_Pointers Pointers.cpp)
add_executable(Data_Structure_And_OOP_with_CPP_Pointer_N_Vectors Pointer_N_Vector.cpp)
add_executable(Data_Structure_And_OOP_with_CPP_New_N_Delete New_N_Delete.cpp)
add_executable(Data_Structure_And_OOP_with_CPP_Pointer_N_Array Pointer_N_Array.cpp)